--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,44 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+/*
 
     You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
+
+
+    ...Or you can use the import command to include
     other sylesheets into your bunde as well, e.j:
-    
+
     import 'relative/path/to/stylesheet.scss';
 
 */
+body{
+    background-image: url("http://getwallpapers.com/wallpaper/full/b/f/f/104170.jpg");
+    background-size: cover;
+     background-repeat: no-repeat;
+}
+.container{
+    background-color: black;
+    height: 200px;
+    width: 80px;
+    padding: 7px;
+    border-radius: 10px;
+    margin: auto;
+}
+#traffictop{
+    background-color: black;
+    height:70px;
+    width: 10px;
+    margin: auto;
+}
+.light{
+    width: 50px;
+    height: 50px;
+    margin:auto;
+    border-radius: 50%;
+    padding: 30px;
+    cursor: pointer;
+&.red{background-color:  #990000;}
+&.yellow{background-color: #cc6600}
+&.green{background-color: #009933;}
+&.selected{box-shadow: #f8ffcc 0px 0px 50px 20px;}
+}
